# StockPro

./: .dockerignore  .env.example  .gitignore  AGENT_FLOW_CODE_REVIEW.md  CLAUDE.md  CODE_REVIEW.md  DEPLOYMENT.md  Dockerfile  OVERVIEW.md  PORTFOLIO_IMPLEMENTATION_PLAN.md  Procfile  conftest.py  encrypt_existing_data.py  mcp.json.example  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  requirements-dev.txt  requirements.txt  stockpro-offer.md  stockpro-research-dashboard.html  test_alert_evaluation.py  test_alpaca_client.py  test_budget_hooks.py  test_chat_smoke.py  test_clerk_auth.py  test_flask_api_routes.py  test_flask_price_alerts.py  test_flask_public_pages.py  test_flask_research_ajax.py  test_flask_ticker_notes.py  test_flask_waitlist.py  test_flask_watchlist_routes.py  test_langsmith_service.py  test_mcp.py  test_multiple_portfolios.py  test_nvda_research.py  test_portfolio_history.py  test_price_cache_fastlane.py  (+11 more)
Offers/: stockpro-offer-summary.html  stockpro-offer-summary.md  stockpro-offer.md  stockpro-research.md  stockpro-workshop-progress.html
docs/: AGENTS.md  DEPLOYMENT.md  ICP_AND_MESSAGING.md  OVERVIEW.md  SUPABASE.md  TOOL_SELECTION.md
marketing/: metrics-snapshot-2026-03-29.md  phase1-user-facing-change-notes.md  phase1-waitlist-landing-copy.md  twitter-strategy.md
mobile-audit/: MISSIONS.md
stockpro-cli/: LICENSE  README.md  pyproject.toml  requirements-dev.txt
stockpro-cli/stockpro_cli/: auth.py  client.py  config.py  exchanges.py  keychain.py  main.py  output.py
stockpro-cli/stockpro_cli/commands/: alerts.py  home.py  news.py  portfolio.py  reports.py  settings.py  telegram.py  ticker.py  watchlist.py
stockpro-cli/tests/: conftest.py  test_client.py  test_config.py  test_keychain.py  test_main.py  test_portfolio_cash.py  test_reports.py  test_settings.py
(+264 files in other folders)
