[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockpro-cli"
version = "0.1.0"
description = "CLI for StockPro AI stock research platform"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
stockpro = "stockpro_cli.main:cli"
