[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockpro-cli"
version = "0.2.0"
description = "CLI for StockPro -- AI-powered stock research from your terminal"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "StockPro" },
]
keywords = ["stocks", "finance", "research", "cli", "ai", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://stockpro-production-11c8.up.railway.app"
Source = "https://github.com/optimusor/stockpro"

[project.scripts]
stockpro = "stockpro_cli.main:main"
